[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.4"]

[tool]
[tool.poetry]
authors = ["killemth <<>>"]
description = ""
name = "repl_python3_GrainMarketTest"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.4"
connexion = "^2.9.0"
SQLAlchemy = "^1.4.23"
marshmallow = "^3.13.0"
marshmallow-sqlalchemy = "^0.26.1"
flask-marshmallow = "^0.14.0"
Flask-SQLAlchemy = "^2.5.1"
swagger-ui-bundle = "^0.0.8"
[tool.poetry.dev-dependencies]
